k8s/ingress/craftista-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: craftista-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: craftista.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-service
            port:
              number: 3000
      - path: /api/catalogue
        pathType: Prefix
        backend:
          service:
            name: catalogue-service
            port:
              number: 5000
      - path: /api/recommendation
        pathType: Prefix
        backend:
          service:
            name: recommendation-service
            port:
              number: 8080
      - path: /api/voting
        pathType: Prefix
        backend:
          service:
            name: voting-service
            port:
              number: 8080
